--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <form action="#" method="get">
         <input type="text" name="firstName" id="firstName">
-        <input type="text" name="lastname" id="lastname">
+        <input type="text" name="lastName" id="lastName">
+        <input type="number" name="age" id="age">
         <input type="button" value="Enviar">
     </form>
 </body>
