--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <input type="date" name="birthdate" id="birthdate">
         <img src="#" alt="Test Img"/>
         <input type="button" value="Enviar">
+        <video src="cat.mp4"></video>
     </form>
 </body>
 </html>
