--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <input type="number" name="age" id="age">
         <input type="date" name="birthdate" id="birthdate">
         <img src="#" alt="Test Img"/>
+        <video src="video/cat.mp4"></video>
         <input type="button" value="Enviar">
-        <video src="cat.mp4"></video>
     </form>
 </body>
 </html>
